<?xml version="1.0"?>
<package format="2">
  <name>on-site-tools</name>
  <version>0.0.0</version>
  <description>The on-site-tools package</description>

  <maintainer email="hiroaki.ishikawa@tier4.jp">Hiroaki ISHIKAWA</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pyside-tools</buildtool_depend>
  <exec_depend>python-qt-bindings</exec_depend>
</package>
